Update code for submission version of paper
Code has been tidied up and tested to prepare for manuscript submission.

--- a/trunk/requirements.txt
+++ b/trunk/requirements.txt
@@ -1,7 +1,9 @@
-# Requirements for PCA Math Tutorial
-pypandoc
+# Requirements for PCA Data Tutorial
 numpy
 scipy
 matplotlib
-sklearn
+scikit-learn
 pathlib
+copulas
+os
+h5py
